# utaha

./: !!!TODOTODOTODOOTODOOTODRO!!!!TODO  .gitignore  README.md  meson.build  screenlog.0  valgrind-out.txt
src/: error.vala  list.vala  load.vala  main.vala  meson.build  parser.vala  remove.vala  start.vala  status.vala  stop.vala
subprojects/: .gitignore  gee.wrap  glib.wrap  json-glib.wrap  libgee.wrap  toml-glib.wrap  vala.wrap  valadoc.wrap
subprojects/utaha-app/: meson.build
subprojects/utaha-app/src/: application.vala  applicationerror.vala  defaultformatter.vala  formatter.vala  formattererror.vala  meson.build  operation.vala  optionsparser.vala  selection.vala  selector.vala  selectoriterator.vala  selectoriteratorbuilder.vala  version.vala
subprojects/utaha-app/src/operation/: countoperation.vala  listoperation.vala  meson.build  operation.vala  operationerror.vala  removeoperation.vala  startoperation.vala  statusoperation.vala  stopoperation.vala
subprojects/utaha-core/: meson.build
subprojects/utaha-core/daemon/: main.vala  meson.build
subprojects/utaha-core/src/: backend.vala  backenderror.vala  backendhealthreport.vala  backendstatus.vala  id.vala  jsonable.vala  meson.build  module.vala  moduleloader.vala  serializable.vala  serializationerror.vala  status.vala  storable.vala  storage.vala  storageerror.vala  storagenode.vala  storagenodeerror.vala  task.vala  taskdata.vala  taskerror.vala  taskiterator.vala  taskstatus.vala  tomlable.vala  wrapper.vala  wrapperstatus.vala
subprojects/utaha-core/src/backend/: backend.vala  backendstatus.vala  meson.build
subprojects/utaha-core/src/id/: iderror.vala  meson.build
subprojects/utaha-core/src/job/: job.vala  joberror.vala  jobstatus.vala  meson.build
subprojects/utaha-core/src/module/: loadmodules.vala  meson.build  moduleerror.vala
subprojects/utaha-core/src/serialization/: arrayelement.vala  element.vala  initializable.vala  initializableerror.vala  meson.build  nullelement.vala  reader.vala  tableelement.vala  valueelement.vala  writer.vala
subprojects/utaha-core/src/serialization/json/: jsonreader.vala  jsonwriter.vala  meson.build
subprojects/utaha-core/src/status/: meson.build  status.vala
subprojects/utaha-core/src/storage/: meson.build  storableerror.vala  storage.vala  storagenodeerror.vala
subprojects/utaha-core/src/task/: meson.build  task.vala  taskdata.vala  taskstatus.vala
subprojects/utaha-core/src/wrapper/: meson.build  wrapper.vala  wrappererror.vala  wrapperstatus.vala
subprojects/utaha-default-wrapper/: meson.build
subprojects/utaha-default-wrapper/src/: meson.build  wrapper.vala
subprojects/utaha-jobs/: meson.build
subprojects/utaha-jobs/src/: meson.build  module.vala  paralleljob.vala  sequentialjob.vala  shelljob.vala
subprojects/utaha-posix-backend/: meson.build
subprojects/utaha-posix-backend/src/: meson.build  posixbackend.vala
subprojects/utaha-screen-backend/: meson.build
subprojects/utaha-screen-backend/src/: meson.build  screen.vala  screenbackend.vala
