sources = files(
  'backend.vala',
  'backenderror.vala',
  'backendhealthreport.vala',
  'backendstatus.vala',
  'id.vala',
  'iderror.vala',
  'jsonable.vala',
  'loadmodules.vala',
  'module.vala',
  'moduleerror.vala',
  'moduleloader.vala',
  'serializable.vala',
  'serializationerror.vala',
  'status.vala',
  'storage.vala',
  'storagenode.vala',
  'storagenodeerror.vala',
  'task.vala',
  'taskdata.vala',
  'taskstatus.vala',
  'wrapper.vala',
  'wrapperstatus.vala',
)
